# chunk-attention

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
cmake/: detect_python.cmake  policy.cmake
cpp/: CMakeLists.txt
cpp/chunk_attn/: CMakeLists.txt  attention.cpp  attention.h  chunk.cpp  chunk.h  chunk_allocator.cpp  chunk_allocator.h  chunk_info.h  cuda_compat.h  kernel_cpu_mkl.cpp  kernel_cpu_mkl.h  kernel_cpu_tls.h  kernel_cuda.cu  kernel_cuda.h  kv_cache.cpp  kv_cache.h  layernorm_kernels.cu  layernorm_kernels.h  logging.cpp  logging.h  pos_encoding_kernels.cu  pos_encoding_kernels.h  python_exports.cpp  python_exports_ops.cpp  small_vector.h  spin_lock.h  str_utils.cpp  str_utils.h  task_executor.cpp  task_executor.h
cpp/tests/: CMakeLists.txt  test_cpu_kernel.cpp  test_gpu_kernel.cpp
src/chunk_attn/: __init__.py  logger.py  nvtx.py
src/chunk_attn/arithmetic/: __init__.py  dtype.py  gpt.py  linear.py  llama.py  metrics.py  module.py  tensor.py
src/chunk_attn/models/: __init__.py  model_host.py  sequence.py
src/chunk_attn/models/llama_hf/: __init__.py  casual_attn.py  configuration_llama.py  layernorm.py  layernorm_vllm.py  modeling_llama.py  rotary_embedding.py  rotary_embedding_vllm.py
tests/: benchmark_attn_pytorch.py  benchmark_attn_xformers.py  benchmark_chunk_attn.py  benchmark_flash_attn.py  benchmark_tgi.py  benchmark_vllm.py  my_llm_engine.py  test_arithmetic.py  test_arithmetic_llama.py  test_chunk_attn_cpu.py  test_chunk_attn_cuda.py  test_llama.py  tgi_server_hook.py
