[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
  "wheel",
]

[project]
name = "chunk-attn"
version = "1.0rc1"
description = "Chunk Attention with Prefix-Aware KV Cache and Two-Phase Partition"
readme = "README.md"
authors = [
    { name = "Lu Ye", email = "luye@microsoft.com" },
    { name = "Ze Tao", email = "zetao@microsoft.com" },
    { name = "Yong Huang", email = "yohuan@microsoft.com" },
    { name = "Yang Li", email = "yali2@microsoft.com" }]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
]
optional-dependencies.docs = [
  "flask>=2.0.2",
  "furo>=2022.12.7",
  "sphinx>=6.1.3",
  "sphinx-autodoc-typehints!=1.23.4,>=1.22",
]
optional-dependencies.testing = [
  "pytest>=7.2.2",
  'model-perf',
  "mypy",
]
[project.urls]
"Homepage" = "https://www.github.com/"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
